[package]
authors = ["jrconlin <jconlin+git@mozilla.com>"]
name = "pushbox"
version = "0.3.0"
edition = "2018"

[dependencies]
env_logger = "0.7.1"
failure = "0.1.7"
futures = "0.3.4"
mysql = "17.0.0"
rand = "0.7.3"
rand_core = "0.5.1"
reqwest = { version = "0.10.4", features = ["blocking", "gzip", "json"] }
rocket = "0.4.4"
rocket_codegen = "0.4.4"
# rusoto > 0.42 is async / future based
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
slog = { version = "2.5.2", features = ["max_level_debug", "release_max_level_debug"] }
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.5.0"
time = "0.2.9"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
rocket_contrib = { version = "0.4.4", default-features = true }
percent-encoding= "2.1.0"
