[package]
authors = ["jrconlin <jconlin+git@mozilla.com>"]
name = "pushbox"
version = "0.3.0"
edition = "2018"

[dependencies]
env_logger = "0.8"
futures = "0.3"
mysql = "20.0"
rand = "0.7.3"
rand_core = "0.5.1"
reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
rocket = "0.4"
rocket_codegen = "0.4"
# rusoto > 0.42 is async / future based
rusoto_core = "0.45"
rusoto_sqs = "0.45"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.5.2", features = ["max_level_debug", "release_max_level_debug"] }
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-scope = "4.3.0"
slog-stdlog = "4.1"
slog-term = "2.6"
time = "0.2"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
rocket_contrib = { version = "0.4", default-features = true }
percent-encoding= "2.1.0"
thiserror="1.0"
backtrace="0.3"
tokio = { version = "0.3.5", features = ["time"]}